Implemented api calls for getting list of stations.

--- a/src/app/sidemenu/sidemenu.component.html
+++ b/src/app/sidemenu/sidemenu.component.html
@@ -3,20 +3,20 @@
     <img class="logo" src="./assets/svg/logo.svg">
   </div>
   <div class="nav-link-container" [routerLink]="['stanice','spisak']" [routerLinkActive]="'active'">
-    <img class="nav-link-logo" src="./assets/svg/grid.svg">
+    <img class="nav-link-icon" src="./assets/svg/grid.svg">
     <a class="nav-link">Spisak</a>
   </div>
   <div class="nav-link-container" [routerLink]="['stanice','karta']" [routerLinkActive]="'active'">
-    <img class="nav-link-logo" src="./assets/svg/map.svg">
+    <img class="nav-link-icon" src="./assets/svg/map.svg">
     <a class="nav-link">Karta</a>
   </div>
   <div class="nav-link-container" [routerLink]="['o','sistemu']" [routerLinkActive]="'active'">
-    <img class="nav-link-logo" src="./assets/svg/system.svg">
+    <img class="nav-link-icon" src="./assets/svg/system.svg">
     <a class="nav-link">O sistemu</a>
   </div>
   <div class="nav-link-container" [routerLink]="['o','mjerenjima']" [routerLinkActive]="'active'">
-    <img class="nav-link-logo" src="./assets/svg/about.svg">
-    <a class="nav-link">Šta mjerenja znače</a>
+    <img class="nav-link-icon" src="./assets/svg/about.svg">
+    <a class="nav-link">Šta mjerenja znače?</a>
   </div>
   <div class="under-development">
     sajt u izradi
