--- a/src/app/stations/map/map.component.html
+++ b/src/app/stations/map/map.component.html
@@ -1,16 +1,17 @@
 <div id="map" class="map"></div>
+
 <button class="btn btn-light recenter-button" (click)="setCenter()">Centriraj</button>
-<div id="sm{{station.info.id}}" class="station-marker" [class.show]="loaded"
-  [routerLink]="['../detaljno/'+station.info.id]" *ngFor="let station of stations">
-  <div class="aqi-cicle" style="background-color: {{station['level'].color}}">
-    <span>{{station.airQuality.aqi}}
-    </span>
+
+<div [id]="'sm' + station.info.id" class="station-marker" [class.show]="loaded"
+  [routerLink]="['../detaljno/' + station.info.id]" *ngFor="let station of stations">
+
+  <div class="aqi-cicle" [style.background-color]="station.level.color">
+    <span>{{ station.airQuality.aqi }}</span>
   </div>
+
   <div class="details">
-    <b>{{station.info.location}}</b>
+    <b>{{ station.info.location }}</b>
     <br>
-    {{station.info.preciseLocation}}
+    {{ station.info.preciseLocation }}
   </div>
-
-
 </div>
