--- a/src/app/sidemenu/sidemenu.component.scss
+++ b/src/app/sidemenu/sidemenu.component.scss
@@ -18,14 +18,14 @@
     margin-bottom: 5px;
     opacity: 0.6;
     transition: all 0.2s;
-    .nav-link-logo {
+    .nav-link-icon {
       width: 24px;
       height: auto;
-      margin-left: 45px;
-      margin-right: 20px;
+      margin-left: 25px;
+      margin-right: 15px;
     }
     .nav-link {
-      font-size: 18px;
+      font-size: 16px;
       font-weight: 500;
     }
   }
@@ -44,7 +44,7 @@
   .under-development {
     position: absolute;
     top: 42px;
-    left: 100px;
+    left: 50px;
     font-size: 15px;
     font-weight: bold;
     color: white;
